--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" />
+            android:label="@string/title_activity_maps"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".History" />
         <activity android:name=".FirstActivity">
             <intent-filter>
@@ -47,8 +48,15 @@
         <activity
             android:name=".NavigateActivity"
             android:label="@string/title_activity_navigate"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".MapsActivity2"
+            android:label="@string/title_activity_maps2" />
+        <activity android:name=".ViewOrdersC" />
+        <activity android:name=".ViewTripsD" />
+        <activity android:name=".ViewOrdersD" />
+        <activity android:name=".ViewOrdersA" />
+        <activity android:name=".ViewDriversA"></activity>
     </application>
 
 </manifest>
