To be done: Toggle, distance , assign

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
         <activity android:name=".DriverSelection" />
         <activity android:name=".ViewTripsA" />
         <activity android:name=".PaymentActivity" />
-
+        <activity android:name=".PayMentGateWay"/>
     </application>
 
 </manifest>
